--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@actions/github": "^4.0.0",
     "axios": "^0.21.1",
     "cloudinary": "^1.25.1",
+    "json-diff": "^0.5.4",
+    "lcov-parse": "^1.0.0",
+    "lodash": "^4.17.21",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
