--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install
         run: npm install
 
-      - name: Test
-        run: npm test
+      # - name: Test
+      #   run: npm test
       # - name: Lint
       #   run: npm run lint
       - name: Monitor coverage
