--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          clover_file: "src/clover-simplified.xml"
+          clover_file: "src/clover-.xml"
       # - name: identify flaky test
       #   uses: ./
       #   with:
